--- a/views/login.ejs
+++ b/views/login.ejs
@@ -55,7 +55,7 @@
 						<label class="t"></label>　　　
 						<button type="button"  id="submit_btn" 
 						class="btn btn-primary btn-lg">&nbsp;登&nbsp;录&nbsp </button>
-						<input type="reset" value="&nbsp;重&nbsp;置&nbsp;" class="btn btn-default btn-lg">
+						&nbsp;<input type="button" value="&nbsp;立&nbsp;即&nbsp;注&nbsp;册&nbsp;" class="register btn btn-default btn-lg">
 					</div>
 				</form>
 			</div>
